[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/HUD Elements/shop button.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StoreUI.gd" type="Script" id=2]
[ext_resource path="res://Art/HUD Elements/pellet icon.png" type="Texture" id=3]
[ext_resource path="res://Art/HUD Elements/Sell Fish.png" type="Texture" id=4]
[ext_resource path="res://Art/HUD Elements/More Fish.png" type="Texture" id=5]
[ext_resource path="res://Audio/button.wav" type="AudioStream" id=6]
[ext_resource path="res://Art/HUD Elements/money.png" type="Texture" id=7]
[ext_resource path="res://Art/HUD Elements/buy autofeeder.png" type="Texture" id=8]

[sub_resource type="ImageTexture" id=1]

[node name="StoreUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.85
anchor_right = 1.0
anchor_bottom = 0.993
margin_left = -0.400024
margin_right = 2.0
margin_bottom = 0.199951
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeedButton" type="TextureButton" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 63.7705
margin_top = 38.1008
margin_right = -60.2295
margin_bottom = -523.899
texture_normal = ExtResource( 3 )
texture_pressed = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeedLabel" type="Label" parent="Panel/FeedButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 49.5231
margin_bottom = 29.5231
text = "Feed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellButton" type="TextureButton" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.78
margin_top = 118.961
margin_right = -25.22
margin_bottom = -413.038
texture_normal = ExtResource( 4 )
texture_pressed = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellLabel" type="Label" parent="Panel/SellButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.568787
margin_top = 58.6239
margin_right = -0.568787
margin_bottom = 8.62302
text = "Sell"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyFish" type="TextureButton" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.5805
margin_top = 206.811
margin_right = -30.4195
margin_bottom = -325.189
texture_normal = ExtResource( 5 )
texture_pressed = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyFishLabel" type="Label" parent="Panel/BuyFish"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 70.0
text = "Fish"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutofeederBtn" type="TextureButton" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.498
margin_top = 298.388
margin_right = -15.502
margin_bottom = -233.612
texture_normal = ExtResource( 8 )
texture_pressed = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoFeederLbl" type="Label" parent="Panel/AutofeederBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 70.0
margin_bottom = 20.0001
text = "Autofeed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoFeederCostLbl2" type="Label" parent="Panel/AutofeederBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 82.5137
margin_bottom = 32.5137
text = "$10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 73.0
margin_top = 560.0
margin_bottom = -21.9999
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoreIcon" type="TextureRect" parent="Panel"]
margin_left = 15.3425
margin_top = 395.295
margin_right = 143.343
margin_bottom = 523.295
texture = ExtResource( 1 )

[node name="MoneyIcon" type="TextureRect" parent="Panel"]
margin_left = 50.6938
margin_top = 549.154
margin_right = 64.6938
margin_bottom = 580.154
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="pressed" from="Panel/FeedButton" to="." method="_on_FeedButton_pressed"]
[connection signal="pressed" from="Panel/SellButton" to="." method="_on_SellButton_pressed"]
[connection signal="pressed" from="Panel/BuyFish" to="." method="_on_BuyFish_pressed"]
[connection signal="pressed" from="Panel/AutofeederBtn" to="." method="_on_AutofeederBtn_pressed"]
